[package]
name = "markrust"
version = "2.3.0"
authors = ["guppy0130 <guppy0130@yahoo.com>"]
edition = "2021"
description = "Converts Markdown to Atlassian markup"
readme = "README.md"
repository = "https://github.com/guppy0130/markrust"
keywords = ["markdown", "atlassian"]
categories = ["command-line-utilities", "template-engine"]
exclude = ["setup_env.ps1"]

[dependencies.pulldown-cmark]
version = "0.9.2"
default-features = false
features = ["simd"]

[dependencies.clap]
version = "3.2.17"
features = ["derive"]

[dependencies.scraper]
version = "0.13.0"

[dependencies.ego-tree]
version = "0.6.2"

[dependencies.markup5ever]
version = "0.11.0"
