[package]
name = "markrust"
version = "2.4.0"
authors = ["guppy0130 <guppy0130@yahoo.com>"]
edition = "2021"
description = "Converts Markdown to Atlassian markup"
readme = "README.md"
repository = "https://github.com/guppy0130/markrust"
keywords = ["markdown", "atlassian"]
categories = ["command-line-utilities", "template-engine"]

[dependencies.pulldown-cmark]
version = "0.11.0"
default-features = false
features = ["simd"]

[dependencies.clap]
version = "3.2.17"
features = ["derive"]

[dependencies.scraper]
version = "0.20.0"

[dependencies.ego-tree]
version = "0.6.2"

[dependencies.markup5ever]
version = "0.12.1"
